# Cagentic

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.py
cagentic/: __init__.py  agent.py  anthropic_client.py  background.py  browser.py  cli.py  config.py  documents.py  emailer.py  engine.py  gateway.py  github.py  mcp_client.py  notes.py  ollama_client.py  openai_client.py  permissions.py  projects.py  prompt.py  providers.py  reminders.py  service.py  sessions.py  state.py  subagent.py  tasks.py  tools.py  ui.py
cagentic/services/: compact.py  transcript.py
extension/: background.js  manifest.json  popup.html  popup.js
tests/: test_status_bar.py
