[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cagentic"
version = "0.1.0"
description = "Your local personal AI assistant, powered by Ollama."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cagentic" }]
dependencies = [
    "requests>=2.31",
    "prompt_toolkit>=3.0",
]

[project.scripts]
cagentic = "cagentic.cli:main"

[tool.setuptools.packages.find]
include = ["cagentic*"]
