[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cagentic"
version = "0.1.0"
description = "Your local personal AI assistant, powered by Ollama."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cagentic" }]
keywords = ["ai", "assistant", "ollama", "llm", "cli", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "requests>=2.31",
    "prompt_toolkit>=3.0",
    "pypdf>=4.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/cagentic"
Documentation = "https://github.com/YOUR_USERNAME/cagentic#readme"
Repository = "https://github.com/YOUR_USERNAME/cagentic"
Issues = "https://github.com/YOUR_USERNAME/cagentic/issues"

[project.scripts]
cagentic = "cagentic.cli:main"

[tool.setuptools.packages.find]
include = ["cagentic*"]
